# linkstatus

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml  test.yml
.github/workflows/properties/: test.properties.json
linkstatus/: __init__.py  linkstatus.py  parser.py
src/: linkstatus.py  parser.py
tests/: conftest.py  data.yaml  links_text  test_linkstatus.py  test_methods.py
tests/data/: markdown_file.md  text_file
tests/data/recursive/: recursive_text_file.txt
tests/dir/: links_markdown.md  markdown.md
